# mcp-gateway-registry

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  DEV_INSTRUCTIONS.md  NOTICE  README.md  RUFF_SETUP.md  docker-compose.override.yml.example  docker-compose.podman.yml  docker-compose.yml  get_asor_token.py  mkdocs.yml  pyproject.toml  tartufo.toml  test-keycloak-mcp.sh  记录.md
api/: README.md  (+2 more)
auth-server/: .env.example  README.md  cognito_utils.py  pyproject.toml  pytest.ini
auth-server/src/auth_server/: container.py  deps.py  oauth2_providers.yml  scopes.yml  server.py
auth-server/tests/: conftest.py
auth-server/tests/integration/: test_oauth_callback_token_flow.py  test_oauth_flow_routes.py  test_root_level_routes.py  test_well_known_routes.py
auth-server/tests/unit/: __init__.py  test_oauth_callback_session.py  test_user_service.py
auth-utils/: pyproject.toml  pytest.ini
auth-utils/src/auth_utils/: __init__.py  config.py  jwt_utils.py  models.py  scopes.py
auth-utils/tests/unit/: test_jwt_utils.py  test_scopes.py
auth_server/: .env.example  README.md  cognito_utils.py  metrics_middleware.py  oauth2_providers.yml  pyproject.toml  pytest.ini  scopes.yml  server.py
auth_server/core/: __init__.py  config.py  state.py
auth_server/models/: __init__.py  device_flow.py  tokens.py
auth_server/providers/: __init__.py  base.py  cognito.py  entra.py  factory.py  keycloak.py
auth_server/routes/: authorize.py  device_flow.py  internal.py  oauth_device.py  oauth_flow.py  well_known.py
auth_server/services/: cognito_validator_service.py  user_service.py
auth_server/tests/: __init__.py  conftest.py
auth_server/tests/integration/: __init__.py  test_device_flow_routes.py  test_oauth_callback_token_flow.py  test_oauth_device_routes.py  test_oauth_flow_routes.py  test_root_level_routes.py  test_well_known_routes.py
auth_server/tests/unit/: test_jwt_audience.py  test_oauth_callback_session.py  test_user_service.py
auth_server/utils/: __init__.py  config_loader.py  logs.py  otel_metrics.py  security_mask.py
registry/: __init__.py  constants.py  main.py  pyproject.toml  pytest.ini  telemetry.py  version.py
registry/api/: agent_routes.py  internal_routes.py  management_routes.py  mcp_oauth_router.py  mcp_routes.py  proxy_routes.py  redirect_routes.py  registry_routes.py  search_routes.py  server_routes.py  server_routes_v1.py  wellknown_routes.py
registry/api/mcp/: oauth_router.py
registry/api/v1/: acl_routes.py  meta_routes.py  permissions_routes.py  search_routes.py  server_routes.py  token_routes.py
registry/auth/: dependencies.py  jwt_utils.py  middleware.py  routes.py
registry/auth/oauth/: __init__.py  flow_manager.py  flow_state_manager.py  oauth_client.py  oauth_http_client.py  oauth_service.py  oauth_utils.py  redis_flow_storage.py  token_manager.py
registry/config/: redis_config.py
registry/core/: acl_constants.py  config.py  mcp_client.py  mcp_config.py  nginx_service.py  server_strategies.py  telemetry_decorators.py
registry/health/: routes.py  service.py
registry/mcp_integration/: service.py  utils.py
registry/mcp_integration/config/: service.py
registry/mcp_integration/models/: moldes.py
registry/mcp_integration/oauth/: oauth_flow_manager.py  oauth_http_client.py  oauth_token_manager.py  service.py
registry/mcp_integration/services/: config_service.py  connection_service.py
registry/mcp_management/: connections_repository.py  mcp_connection.py  mcp_manager.py  user_connection_manager.py
registry/metrics/: __init__.py  client.py  middleware.py  utils.py
registry/models/: __init__.py  emus.py  models.py  oauth_models.py
registry/oauth/: flow_manager.py  reconn_manager.py  registry.py  tracker.py
registry/proxy/: __init__.py  routes.py
registry/schemas/: __init__.py  acl_schema.py  agent_models.py  anthropic_schema.py  enums.py  errors.py  federation_schema.py  management.py  permissions_schema.py  proxy_tool_schema.py  security.py  server_api_schemas.py  server_models_v1.py
registry/search/: __init__.py  base.py  embedded_service.py  external_service.py  service.py
registry/servers/: atlassian.json  aws-knowledge.json
registry/services/: access_control_service.py  acl_utils.py  agent_scanner.py  agent_service.py  agent_transform_service.py  federation_service.py  group_service.py  permissions_utils.py  security_scanner.py  server_service.py  server_service_v1.py  transform_service.py  user_service.py
registry/services/federation/: anthropic_client.py  asor_client.py  base_client.py
registry/services/oauth/: base.py  connection_service.py  connection_status_service.py  flow_helpers.py  mcp_service.py  oauth_config_service.py  oauth_service.py  reconnection_lock_service.py  service.py  status_resolver.py  token_service.py
registry/services/search/: __init__.py  base.py  embedded_service.py  external_service.py  service.py
registry/services/v1/: __init__.py
registry/src/registry/: __init__.py  app_factory.py  constants.py  container.py  deps.py  main.py  routers.py  version.py
registry/templates/oauth/: oauth_error.html  oauth_success.html
registry/tests/: __init__.py  conftest.py
registry/tests/fixtures/: factories.py
registry/tests/integration/: __init__.py  test_agentcore_routes.py  test_proxy_routes.py  test_proxy_routes.py.bak  test_search_routes.py  test_server_routes.py
registry/tests/unit/: __init__.py  test_proxy_to_mcp_server.py  test_proxy_to_mcp_server.py.bak
registry/utils/: agent_validator.py  crypto_utils.py  keycloak_manager.py  log.py  otel_metrics.py  scopes_manager.py  utils.py
servers/mcpgw/: ARCHITECTURE.md  README.md  __init__.py  config.py  pyproject.toml  server.py  server.py.backup
servers/mcpgw/auth/: custom_jwt.py  middleware.py
servers/mcpgw/core/: __init__.py  auth.py  registry.py  scopes.py
servers/mcpgw/db/: client.py  provider.py  search.py
servers/mcpgw/models/: enums.py  models.py
servers/mcpgw/search/: __init__.py  base.py  embedded_service.py  external_service.py  service.py
(+543 files in other folders)
