[project]
name = "mcp-registry-workspace"
version = "0.2.0"
description = "MCP Gateway Registry - Monorepo Workspace Root"
readme = "README.md"
requires-python = ">=3.12,<3.13"

# Root workspace dependencies needed for scripts
dependencies = []

[project.scripts]
# Data management scripts (use workspace dependencies)
seed-data = "scripts.seed_mongodb:cli"
sync-mongo-weaviate = "scripts.sync_mongo_to_weaviate:cli"

# Optional dependencies are defined in sub-projects where they're used
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Workspace root - no packages defined here
# Packages are defined in sub-projects
packages = []

# Pytest and coverage configurations are in sub-projects

[tool.uv.workspace]
members = [
    "packages",
    "registry",
    "auth_server",
    "servers/mcpgw",
]

[dependency-groups]
dev = [
    "poethepoet>=0.40.0",
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
]

[tool.poe.tasks]
# Version management
version = { shell = "echo '\n📦 Workspace versions:\n' && echo '  Root       →' $(grep -m1 '^version = ' pyproject.toml | cut -d'\"' -f2) && echo '  packages   →' $(grep -m1 '^version = ' packages/pyproject.toml | cut -d'\"' -f2) && echo '  registry   →' $(grep -m1 '^version = ' registry/pyproject.toml | cut -d'\"' -f2) && echo '  auth_server →' $(grep -m1 '^version = ' auth_server/pyproject.toml | cut -d'\"' -f2) && echo '  mcpgw      →' $(grep -m1 '^version = ' servers/mcpgw/pyproject.toml | cut -d'\"' -f2) && echo ''", help = "Show versions across all projects" }
version-sync = { script = "scripts.sync_version:main", help = "Sync version across all projects (usage: poe version-sync 0.2.0)" }

# Run all tests across all projects
test-all = { shell = "cd registry && uv run poe test && cd ../auth_server && uv run poe test && cd ../packages && uv run poe test" }
test-all-cov = { shell = "cd registry && uv run poe test-cov && cd ../auth_server && uv run poe test-cov && cd ../packages && uv run poe test-cov" }

# Registry tests
test-registry = { shell = "cd registry && uv run poe test" }
test-registry-cov = { shell = "cd registry && uv run poe test-cov" }

# Auth server tests
test-auth-server = { shell = "cd auth_server && uv run poe test" }
test-auth-server-cov = { shell = "cd auth_server && uv run poe test-cov" }

# Packages tests
test-packages = { shell = "cd packages && uv run poe test" }
test-packages-cov = { shell = "cd packages && uv run poe test-cov" }

# Linting and formatting with Ruff
lint = { shell = "uv run ruff check .", help = "Check code with Ruff linter" }
lint-fix = { shell = "uv run ruff check --fix .", help = "Check and auto-fix code with Ruff" }
format = { shell = "uv run ruff format .", help = "Format code with Ruff" }
format-check = { shell = "uv run ruff format --check .", help = "Check code formatting without modifying" }
lint-all = { shell = "uv run ruff check --fix . && uv run ruff format .", help = "Run linter with fixes and formatter" }

[tool.ruff]
# Target Python 3.12
target-version = "py312"
line-length = 100

# Include common Python paths
include = ["*.py", "*.pyi", "**/pyproject.toml"]

# Exclude common non-code directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "htmlcov",
    ".pytest_cache",
    "node_modules",
    "frontend",
    "data",
    "logs",
    "ssl",
    "secrets",
    "agents",
    "cli",
    "credentials-provider",
    "metrics-service",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and additional rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented out code)
    "PL",    # Pylint
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules that may be too strict
ignore = [
    "E501",    # Line too long (handled by formatter)
    "W191",    # Indentation contains tabs (handled by formatter)
    "W291",    # Trailing whitespace (handled by formatter)
    "W293",    # Blank line contains whitespace (auto-formatted)
    "B006",    # Mutable default argument (acceptable pattern in this codebase)
    "B007",    # Loop control variable not used (acceptable pattern)
    "B008",    # Do not perform function calls in argument defaults (FastAPI Depends)
    "B019",    # lru_cache on methods (acceptable pattern)
    "B023",    # Function definition doesn't bind loop variable (acceptable)
    "B027",    # Empty method in abstract class without decorator
    "B904",    # Use raise from to distinguish exception causes (too strict)
    "B905",    # zip without strict parameter (Python 3.10+ feature)
    "C401",    # Unnecessary generator (minor optimization)
    "E402",    # Module level import not at top (scripts need path manipulation)
    "E712",    # Comparison to True/False (acceptable in tests)
    "E722",    # Bare except (acceptable in specific cases)
    "E731",    # Lambda assignment (acceptable pattern)
    "F811",    # Redefinition of unused name (some cases acceptable)
    "F821",    # Undefined name (false positives in some cases)
    "F841",    # Local variable assigned but never used (acceptable in some cases)
    "ARG001",  # Unused function argument (common in FastAPI dependencies)
    "ARG002",  # Unused method argument (common in abstract methods)
    "ARG005",  # Unused lambda argument (acceptable pattern)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "PLR1714", # Consider merging comparisons
    "PLR2004", # Magic value used in comparison
    "PLR1704", # Redefining argument with local name
    "PLC0415", # Import should be at top-level (needed for circular imports)
    "PT011",   # pytest.raises without match parameter
    "PT012",   # pytest.raises block should contain single statement
    "PT018",   # Assertion should be broken down (acceptable in tests)
    "PTH100",  # os.path.abspath → Path.resolve (gradual migration)
    "PTH101",  # os.chmod → Path.chmod (gradual migration)
    "PTH103",  # os.makedirs → Path.mkdir (gradual migration)
    "PTH104",  # os.rename → Path.rename (gradual migration)
    "PTH108",  # os.unlink → Path.unlink (gradual migration)
    "PTH109",  # os.getcwd → Path.cwd (gradual migration)
    "PTH110",  # os.path.exists → Path.exists (gradual migration)
    "PTH111",  # os.path.expanduser → Path.expanduser (gradual migration)
    "PTH118",  # os.path.join → Path / operator (gradual migration)
    "PTH119",  # os.path.basename → Path.name (gradual migration)
    "PTH120",  # os.path.dirname → Path.parent (gradual migration)
    "PTH123",  # open() → Path.open() (gradual migration)
    "PTH202",  # os.path.getsize → Path.stat().st_size (gradual migration)
    "PTH207",  # glob.glob → Path.glob (gradual migration)
    "PLE0605", # Invalid format for __all__ (some cases acceptable)
    "PLR1722", # Use sys.exit instead of exit (acceptable in scripts)
    "PLW0602", # Using global without assignment (false positives)
    "PLW1510", # subprocess.run without check (acceptable pattern)
    "PLW2901", # for loop variable overwritten (acceptable pattern)
    "RET504",  # Unnecessary assignment before return
    "RUF006",  # asyncio.create_task without storing reference (acceptable pattern)
    "RUF013",  # Implicit Optional (PEP 484, gradual migration)
    "RUF059",  # Unpacked variable never used (acceptable pattern)
    "SIM102",  # Use single if statement (readability preference)
    "SIM103",  # Return condition directly (readability preference)
    "SIM105",  # Use contextlib.suppress (readability preference)
    "SIM108",  # Use ternary operator (readability preference)
    "SIM110",  # Use any/all (readability preference)
    "SIM117",  # Use single with statement (readability preference)
    "SIM118",  # Use key in dict (minor optimization)
    "SIM201",  # Use != instead of not == (acceptable style)
    "ERA001",  # Commented out code (acceptable for context)
    "PIE810",  # Call startswith once (minor optimization)
    "TID252",  # Prefer absolute imports (relative imports acceptable)
    "DTZ001",  # datetime() without tzinfo (acceptable in some cases)
    "DTZ003",  # datetime.utcnow (acceptable in some cases)
    "DTZ005",  # datetime.now without tz (acceptable in some cases)
    "DTZ006",  # datetime without timezone (acceptable in some cases)
    "PLW0603", # Global statement (acceptable when needed)
    "RUF005",  # Consider unpacking instead of concatenation (minor optimization)
    "RUF012",  # Mutable class attributes should use ClassVar (Pydantic models)
    "RUF022",  # __all__ is not sorted (not critical)
    "UP008",   # Use super() without args (Python 3+ syntax, gradual migration)
    "UP046",   # Generic class uses Generic subclass (Python 3.12+ syntax)
    "UP047",   # Generic function uses type parameters (Python 3.12+ syntax)
    "N802",    # Function name should be lowercase (property compatibility)
    "N805",    # First argument should be named self (Pydantic validators use cls)
    "N806",    # Variable in function should be lowercase (legacy code)
    "N815",    # Variable should not be mixedCase (API schema fields)
    "N816",    # Variable should not be mixedCase (legacy code)
]

# Allow unused variables when they start with an underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Test files can have additional lenient rules
"tests/**/*.py" = ["PLR2004", "S101", "ARG001", "PLR0913", "F841"]
"**/test_*.py" = ["PLR2004", "S101", "ARG001", "PLR0913", "F841"]

# Scripts and CLI tools can be less strict
"scripts/**/*.py" = ["T201", "PLR0913", "INP001"]
"cli/**/*.py" = ["T201", "PLR0913", "INP001"]

# Server implementations can have legacy patterns
"servers/**/*.py" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["registry", "auth_server", "packages", "servers"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix line endings
line-ending = "auto"

[tool.bandit]
# Bandit security scanner configuration
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "htmlcov",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
]

skips = [
    "B101",  # Use of assert (common in tests)
]
