[project]
name = "mcp-registry-workspace"
version = "0.2.0"
description = "Jarvis Registry - Monorepo Workspace Root"
readme = "README.md"
requires-python = ">=3.12,<3.13"
# Root workspace dependencies needed for scripts
dependencies = [
    # root must depend on all workspace members, referencing them by distribution names
    "registry-pkgs",
    "auth-utils",
    "registry",
    "auth-server",
    "mcpgw",

    # External direct dependencies
    "python-dotenv>=1.0.0",
]

[tool.uv.workspace]
members = [
    "registry-pkgs",
    "auth-utils",
    "registry",
    "auth-server",
    "servers/mcpgw",
]

[tool.uv.sources]
registry-pkgs = { workspace = true }
auth-utils = { workspace = true }
registry = { workspace = true }
auth-server = { workspace = true }
mcpgw = { workspace = true }

[tool.uv]
# Constrain onnxruntime to a version with macOS Intel (x86_64) support
# v1.24.1 only has ARM64 wheels for macOS, so we use an older version
constraint-dependencies = ["onnxruntime<=1.23.2"]

[project.scripts]
# Data management scripts
seed-data = "scripts.seed_mongodb:cli"
sync-mongo-weaviate = "scripts.sync_mongo_to_weaviate:cli"
sync-version = "scripts.sync_version:main"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Workspace root - script folders that are referenced in the [project.scripts] table should be included explicitly in "packages".
packages = ["scripts"]

[dependency-groups]
dev = [
    "poethepoet>=0.40.0",
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "coverage[toml]>=7.4.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "factory-boy>=3.3.0",
    "faker>=24.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "mypy>=1.0.0",
]

[tool.poe.tasks]
# Version management
version = { shell = """
printf "\n📦 Workspace versions:\n" && \
printf '   Root          → %s\n' $(grep -m1 '^version = ' pyproject.toml | cut -d'\"' -f2) && \
printf '   registry-pkgs → %s\n' $(grep -m1 '^version = ' registry-pkgs/pyproject.toml | cut -d'\"' -f2) && \
printf '   auth-utils    → %s\n' $(grep -m1 '^version = ' auth-utils/pyproject.toml | cut -d'\"' -f2) && \
printf '   registry      → %s\n' $(grep -m1 '^version = ' registry/pyproject.toml | cut -d'\"' -f2) && \
printf '   auth-server   → %s\n' $(grep -m1 '^version = ' auth-server/pyproject.toml | cut -d'\"' -f2) && \
printf '   mcpgw       → %s\n' $(grep -m1 '^version = ' servers/mcpgw/pyproject.toml | cut -d'\"' -f2)""", help = "Show versions across all projects" }
version-sync = { script = "scripts.sync_version:main", help = "Sync version across all projects (usage: poe version-sync 0.2.0)" }

# Run all tests across all projects
test-all = { shell = "cd registry && uv run poe test && cd ../auth-server && uv run poe test && cd ../registry-pkgs && uv run poe test && cd ../auth-utils && uv run poe test" }
test-all-cov = { shell = "cd registry && uv run poe test-cov && cd ../auth-server && uv run poe test-cov && cd ../registry-pkgs && uv run poe test-cov && cd ../auth-utils && uv run poe test-cov" }

# registry tests
test-registry = { shell = "cd registry && uv run poe test" }
test-registry-cov = { shell = "cd registry && uv run poe test-cov" }

# auth-server tests
test-auth-server = { shell = "cd auth-server && uv run poe test" }
test-auth-server-cov = { shell = "cd auth-server && uv run poe test-cov" }

# registry-pkgs tests
test-registry-pkgs = { shell = "cd registry-pkgs && uv run poe test" }
test-registry-pkgs-cov = { shell = "cd registry-pkgs && uv run poe test-cov" }

# auth-utils tests
test-auth-utils = { shell = "cd auth-utils && uv run poe test" }
test-auth-utils-cov = { shell = "cd auth-utils && uv run poe test-cov" }

# Linting and formatting
lint = { shell = "uv run ruff check .", help = "Run ruff linter" }
lint-fix = { shell = "uv run ruff check --fix .", help = "Run ruff linter with auto-fix" }
format = { shell = "uv run ruff format .", help = "Format code with ruff" }
format-check = { shell = "uv run ruff format --check .", help = "Check code formatting" }
check = { shell = "uv run ruff check . && uv run ruff format --check .", help = "Run all code quality checks" }
fix = { shell = "uv run ruff check --fix . && uv run ruff format .", help = "Fix all auto-fixable issues and format" }

# Pre-commit hooks
hooks-install = { shell = "uv run pre-commit install -t pre-commit -t post-merge", help = "Install pre-commit and post-merge stage hooks" }
hooks-run = { shell = "uv run pre-commit run --all-files", help = "Run pre-commit on all files" }

# Prepare Python-related artifacts for docker build.
build-artifacts = { shell = """
xargs -I % bash -c 'uv build --package % --wheel --no-build-logs --out-dir build-artifacts' <<EOF
registry-pkgs
auth-utils
registry
auth-server
mcpgw
EOF
uv export --package registry --package registry-pkgs --package auth-utils --no-hashes --no-annotate --no-emit-workspace --quiet -o build-artifacts/requirements-registry.txt
uv export --package auth-server --package registry-pkgs --package auth-utils --no-hashes --no-annotate --no-emit-workspace --quiet -o build-artifacts/requirements-auth-server.txt
uv export --package mcpgw --no-hashes --no-annotate --no-emit-workspace --quiet -o build-artifacts/requirements-mcpgw.txt
""", help = "Generate artifacts for Docker build and put them in the build-artifacts/ folder." }

cleanup-artifacts = { shell = """
_clean_member() {
  xargs -I % bash -c "([ -d '$1/%' ] && rm -rf '$1/%') || ([ -f '$1/%' ] && rm '$1/%') || true" <<-EOF
  build
  htmlcov
  logs
  .coverage
  coverage.xml
EOF
}

export -f _clean_member

xargs -I % bash -c '[ -d "%" ] && rm -rf "%"' <<EOF
build-artifacts
logs
security_scans
registry/src/agent_security_scans
EOF

xargs -I % bash -c '_clean_member "%"' <<EOF
auth-server
registry
registry-pkgs
servers/mcpgw
EOF
""", help = "Clean up build artifacts, coverage reports, and logs." }

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "node_modules",
    "frontend",
    "registry-pkgs/src/registry_pkgs/models/_generated",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (sometimes intentional)
    "E722",   # bare except (will fix incrementally)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses this pattern)
    "B019",   # lru_cache on methods (acceptable in this codebase)
    "B904",   # raise-without-from-inside-except (too noisy)
    "SIM102", # nested if statements (sometimes clearer)
    "SIM105", # use contextlib.suppress (try-except-pass is clearer)
    "SIM108", # use ternary operator (not always clearer)
    "SIM117", # multiple with statements (sometimes clearer nested)
]

[tool.ruff.lint.isort]
# Each value must be the import name of one of our own packages in this workspace.
known-first-party = ["registry_pkgs", "auth_utils", "registry", "auth_server", "mcpgw"]

[tool.ruff.lint.per-file-ignores]
# Import order matters some files. Exclude them from automatic import sorting.
"registry-pkgs/src/registry_pkgs/vector/__init__.py" = ["I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", "frontend", ".venv", "node_modules"]
# B101: assert warnings (used in tests)
# B104: hardcoded bind_all_interfaces (required for containers)
# B105: hardcoded_password_string (false positives on 'id', 'access', 'Bearer' - these are OAuth token type identifiers)
# B106: hardcoded_password_funcarg (false positives on 'Bearer' - this is the OAuth 2.0 standard token type)
skips = ["B101", "B104", "B105", "B106"]
