[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Auto-discover packages, excluding tests
packages = {find = {exclude = ["tests*", "*.tests*"]}}

[tool.uv.sources]
packages = { workspace = true }

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json"]

[project]
name = "auth_server"
version = "0.2.0"
description = "OAuth2/OIDC Authentication Server for MCP Gateway Registry"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    
    # Auth and security
    "pyjwt>=2.6.0",
    "python-jose>=3.3.0",
    "cryptography>=40.0.0",
    "itsdangerous>=2.1.0",
    
    # OAuth providers
    "boto3>=1.28.0",  # For Cognito
    "requests>=2.28.0",

    # Local packages
    "packages",

]

[tool.uv]
# Local-only project - never resolve from PyPI
package = false

[tool.poe.tasks]
# Development server (runs from parent directory)
dev = { shell = "cd .. && uv run uvicorn auth_server.server:app --reload --host 0.0.0.0 --port 8888" }

# Run all tests (use parent's environment)
test = { shell = "cd .. && uv run pytest auth_server/tests/ -v" }
test-cov = { shell = "cd .. && uv run pytest auth_server/tests/ -v --cov=auth_server --cov-report=html --cov-report=term --cov-report=xml" }

# Run unit tests only
test-unit = { shell = "cd .. && uv run pytest auth_server/tests/ -v -m unit" }

# Run integration tests only
test-integration = { shell = "cd .. && uv run pytest auth_server/tests/ -v -m integration" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "poethepoet>=0.24.0",
]