[project]
name = "mcpgw-mcp-server"
version = "0.1.0"
description = "MCP server to interact with the MCP Gateway Registry API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.11.3",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "websockets>=15.0.1",
    "pyyaml>=6.0.2",
    "weaviate-client>=4.18.1",
    "mcp>=1.9.3",
    "fastmcp>=2.13.1",
    "pyjwt>=2.10.0",
    "packages",
]

[project.optional-dependencies]
# Vector search with embedded FAISS (default, adds ~2-3GB)
# Install with: pip install -e ".[embedded-search]"
# Skip for external mode: just install base dependencies
embedded-search = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auth", "core", "search", "tools"]
py-modules = ["server", "config"]
