[project]
name = "mcpgw-mcp-server"
version = "0.2.0"
description = "MCP server to interact with the MCP Gateway Registry API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # MCP framework
    "mcp>=1.9.3",
    "fastmcp>=2.13.1",
    "fastapi>=0.115.12",

    # Core dependencies
    "pydantic>=2.11.3",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "websockets>=15.0.1",
    "pyyaml>=6.0.2",

    # Auth
    "pyjwt>=2.10.0",
]

[project.optional-dependencies]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auth", "core", "tools"]
py-modules = ["server", "config"]
